fix: fix alignment in the settings

--- a/src/app/main/settings/sass/style.scss
+++ b/src/app/main/settings/sass/style.scss
@@ -27,7 +27,11 @@
 }
 
 .settings-container {
+  display: flex;
   position: relative;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
 }
 
 .settings-checkbox {
@@ -36,7 +40,8 @@
 
 .settings-container__text {
   width: 14rem;
-  margin: 0 0 20px 50px;
+  margin-left: 10px;
+  white-space: nowrap;
 
   span {
     color: #f50a0a;
@@ -98,7 +103,7 @@
 }
 
 .slider {
-  width: 170px;
+  width: 150px;
   height: 2px;
   border-radius: 2px;
   outline: none;
@@ -119,7 +124,7 @@
   position: relative;
   right: -14px;
   box-sizing: border-box;
-  width: 50px;
+  width: 40px;
   height: 25px;
   margin: 0;
   border-radius: 8px;
@@ -143,11 +148,6 @@
 }
 
 .settings-checkbox + label {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  bottom: 10px;
-  left: 0;
   width: 20px;
   height: 20px;
   margin: 0;
